--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
   "dependencies": {
     "ejs": "2.3.3",
     "express": "4.13.3",
-    "body-parser": "^1.14.1"
+    "body-parser": "^1.14.1",
+    "memory-cache": "0.1.4"
   },
   "engines": {
     "node": "0.12.7"
