--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "ejs": "2.3.3",
     "express": "4.13.3",
     "body-parser": "^1.14.1",
-    "memory-cache": "0.1.4"
+    "memory-cache": "0.1.4",
+    "moment-timezone": "2.6.0"
   },
   "engines": {
     "node": "0.12.7"
