--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "express": "4.13.3",
     "body-parser": "^1.14.1",
     "memory-cache": "0.1.4",
-    "moment": "2.6.0"
+    "moment-timezone": "0.5.3"
   },
   "engines": {
     "node": "0.12.7"
